[tool.poetry]
name = "account-transactions"
version = "0.1.0"
description = ""
authors = ["mrxsky <wwhskynet@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytelegrambotapi = "^4.21.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
